External/Releases/A/6-100/V2024.04.15/Body/README.md

***

# 4 year anniversary update (Beta 25, 2024, Monday, April 15th) (1 day late)

**Tag:** `V2024.04.15`

**Released on:** `2024, Tuesday, April 16th at 05:06 pm PST`

***Pre-release***

This is the 25th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the twenty-third beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

Todays update came a day late, as I lost all focus around 4:00 pm yesterday, and fell behind on many tasks. I was unable to update this project, so I made an update the next day. I plan to release another update today with more changes.

A new vCard is included in this update.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/96/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 24
- - Archived data for discussion 95
- - Archived files related to the 25th remodel
- - No other archived file changes
- **README:**
- - Updated README to version 99 (beta 25)
- - No other updates to the main README file
- **New media:**
- - No new media files
- **Segments:**
- - No new segment data
- **Other:**
- - No other changes

***
